# RelaxInvariantGen

./: CMakeCache.txt  CMakeLists.txt  Dependencies.cpp  Dockerfile  HelloWorld.cpp  MainAnalysis.cpp  Makefile  Order.cpp  Order.h  README.md  ThreadDetails.cpp  ThreadDetails.h  ThreadLocalStorage.cpp  ThreadLocalStorage.h  cmake_install.cmake  perf.data
benchmarks/bench/bpl/: SB.bpl  corr1.bpl  corr2.bpl  corw.bpl  cowr.bpl  gptgent.bpl  run.bpl  run2.bpl  run22wreads.bpl  rwc.bpl  wrw.bpl
benchmarks/bench/code/: RWC.cpp  RWC_dmbs.cpp  SB_dmb_po.cpp  corr1.cpp  corr2.cpp  cowr.cpp  run22w.cpp  run22wreads-temp.cpp  run22wreads.cpp  s.cpp  wrw_2w.cpp  wrw_2w_dmbs.cpp
benchmarks/bench/ir/: RWC_dmb_po.ll  RWC_dmbs.ll  R_dmb_po.ll  SB_dmb_po.ll  SB_dmbs.ll  corw.ll  cowr.ll  run22w_dmbs.ll  s_dmbs.ll  s_po_dmb.ll  wrw_2w.ll  wrw_2w_dmb_po.ll  wrw_2w_dmbs.ll
benchmarks/litmus/bpl/: R.bpl  R.bpl.data  R.bpl.horn  R.bpl.intervals  R.bpl.json  R.bpl.statistics  S.bpl  S.bpl.attributes  S.bpl.data  S.bpl.horn  S.bpl.json  S.bpl.statistics  SB.bpl.attributes  SB.bpl.data  SB.bpl.horn  SB.bpl.intervals  SB.bpl.json  SB.bpl.statistics  corr1.bpl.attributes  corr1.bpl.data  corr1.bpl.horn  corr1.bpl.intervals  corr1.bpl.json  corr1.bpl.statistics  corr2.bpl.attributes  corr2.bpl.horn  corr2.bpl.intervals  corr2.bpl.json  corr2.bpl.statistics  cowr.bpl.attributes  cowr.bpl.data  cowr.bpl.horn  cowr.bpl.intervals  cowr.bpl.json  cowr.bpl.statistics  gptgent.bpl.attributes  gptgent.bpl.data  gptgent.bpl.json  gptgent.bpl.statistics  run.bpl.data  (+29 more)
benchmarks/litmus/litmus/: <stdin>.callgraph.dot  R.cpp  R.ll  RWC.ll  RWC_dmb_po.cpp  R_dmb_po.cpp  R_dmbs.cpp  R_dmbs.ll  R_po_dmb.cpp  R_po_dmb.ll  SB.cpp  SB.ll  SB_dmbs.cpp  compile.sh  compileO3.sh  compileOs.sh  corr1.ll  corr2.ll  corw.cpp  dumpreads  example.ll  main  run.ll  run2.ll  run22w  run22w.c  run22w.ll  run22w_dmbs.cpp  run22w_dmbs_po.cpp  run22w_dmbs_po.ll  run22w_dmbs_reads.cpp  run22w_dmbs_reads.ll  run22wreads-temp.ll  run22wreads.ll.callgraph.dot  s.ll  s_dmbs.cpp  s_po_dmb.cpp  wrw_2w_dmb_po.cpp
benchmarks/litmus/others/: .cpp  bigshot_p.c  bigshot_p.ll  gptsamp.bpl  mod3.ll  stateful01-1  stateful01-2  sync01.c  sync01.ll  temp.cpp
include/: Dependencies.h  InstrInfo.h
relax_example/: 0  3  linear.cpp  linear0  linear3
temp/1/: MainAnalysis.cpp.o.d  ThreadDetails.cpp.o.d
(+175 files in other folders)
